# hearth_and_kin

./: .dockerignore  .env  .envexample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app.py  cleanup_temp_tables.py  docker-compose.yml  flaskapp.py  gunicorn_config.py  imagery.py  narrator.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
.github/workflows/: build.yml  python-app.yml
alembic/: env.py
alembic/versions/: 29055b02e6fd_add_story_uuid_column.py  ac736ded48bc_fixed_gen_ai_columns_in_message_and_.py
data/: audio.txt
db/: test.db
src/: main.py  test.ipynb  test.py
src/agents/: helper_functions.py  narrator.py  supervisor.py
src/api/: character.py  game.py  message.py  narrator.py  newcharacter.py  room.py  story.py  user.py
src/core/: azure.py  config.py  database.py  models.py  mongodb.py  storage.py  websocket.py
src/datamodels/: character.py  session.py
src/models/: character.py  enums.py  game.py  main.py  message.py  room.py  session.py  settings.py  story.py  user.py  utils.py
src/services/: audio.py  imagery.py  narrator.py
src/services/prompts/: core_prompt.py  scenario_1.py
src/www/static/css/: dashboard.css  styles.css
src/www/static/js/: dashboard.js  index.js  lobby.js  newcharacter.js  register.js  story.js  utils.js  websocketManager.js
src/www/static/js/api/: message.js  story.js
src/www/static/soundtrack/: .gitignore
src/www/templates/: dashboard.html  index.html  lobby.html  newcharacter.html  register.html  story.html
templates/: dashboard.html  index.html
tests/: __init__.py  conftest.py  test_create_character.py  test_create_room.py  test_create_story.py  test_create_user.py  test_delete_room.py  test_delete_story.py  test_frontend.py  test_join_room.py  test_join_story.py  test_leave_room.py  test_leave_story.py  test_login.py  test_main.py  test_message.py  test_play_story.py  test_update_story.py  test_user.py
tests/character/: test_create.py  test_update.py
tests/story/: test_create.py  test_delete.py  test_play.py
tests/user/: test_create.py  test_login.py
