[tool.poetry]
name = "hearth-and-kin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
setuptools = "^69.0.2"
bcrypt = "^4.1.1"
elevenlabs = "^0.2.27"
openai = "^1.3.6"
pillow = "^10.1.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlmodel = "^0.0.14"
websockets = "^12.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
langchain-nvidia-ai-endpoints = "^0.1.2"
langchain = "^0.2.5"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.5"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
pytest-dependency = "^0.5.1"
pytest-mock = "^3.12.0"
pytest = "^7.4.3"
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

target-version = "py312"

[tool.ruff.lint]
ignore = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"